// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number Box block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-number-box ugb-number-box ugb-number-box--v2 ugb-number-box--columns-1 ugb-number-box--design-design className"
>
  <div
    className="ugb-number-box__item ugb--shadow-1"
    style={
      Object {
        "backgroundColor": "#123456",
        "borderRadius": 6,
      }
    }
  >
    <span
      className="ugb-number-box__number"
      style={
        Object {
          "backgroundColor": "#123456",
          "color": "#123456",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "num1",
          }
        }
      />
    </span>
    <div
      className="ugb-number-box__content"
    >
      <h4
        className="ugb-number-box__title"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "title1",
            }
          }
        />
      </h4>
      <p
        className="ugb-number-box__description"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`Number Box block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-number-box ugb-number-box ugb-number-box--v2 ugb-number-box--columns-3"
>
  <div
    className="ugb-number-box__item"
    style={
      Object {
        "backgroundColor": undefined,
        "borderRadius": undefined,
      }
    }
  >
    <span
      className="ugb-number-box__number"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "01",
          }
        }
      />
    </span>
    <div
      className="ugb-number-box__content"
    >
      <h4
        className="ugb-number-box__title"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <p
        className="ugb-number-box__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. Use this space for describing your block. Any text will do.",
            }
          }
        />
      </p>
    </div>
  </div>
  <div
    className="ugb-number-box__item"
    style={
      Object {
        "backgroundColor": undefined,
        "borderRadius": undefined,
      }
    }
  >
    <span
      className="ugb-number-box__number"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "02",
          }
        }
      />
    </span>
    <div
      className="ugb-number-box__content"
    >
      <h4
        className="ugb-number-box__title"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <p
        className="ugb-number-box__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. Use this space for describing your block. Any text will do.",
            }
          }
        />
      </p>
    </div>
  </div>
  <div
    className="ugb-number-box__item"
    style={
      Object {
        "backgroundColor": undefined,
        "borderRadius": undefined,
      }
    }
  >
    <span
      className="ugb-number-box__number"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "03",
          }
        }
      />
    </span>
    <div
      className="ugb-number-box__content"
    >
      <h4
        className="ugb-number-box__title"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <p
        className="ugb-number-box__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. Use this space for describing your block. Any text will do.",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;
